think I fixed the about animation on mobile

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -20,11 +20,8 @@
 
 
 .aboutWrapper {
-  /* width: 100%;
-  height: 100vh; */
   position: relative;
   overflow: hidden;
-  
 }
 
 
@@ -43,7 +40,6 @@
   @media screen and (min-width: 768px) {
     .aboutTitle {
       font-size: 5rem;
-  
   }
 }
   @media screen and (min-width: 1024px) {
@@ -186,6 +182,7 @@
       font-size: .75rem;
   }
 }
+
 
 .txtEducation {
   color: cornsilk;
